@@ -2,6 +2,8 @@ lldpd (0.9.6)
   * Change:
     + Add a compile-time option to restore pre-0.9.2 JSON format (when
       using json-c). Use `--enable-json0` to enable this option.
+    + Support for newer ethtool interface on Linux
+      (ETHTOOL_LINKSETTINGS) and additional speed settings.
   * Fix:
     + Correctly parse LLDP-MED civic address when the length of the
       TLV exceeds the length of the address.
